[gd_scene load_steps=3 format=3 uid="uid://c1sc75s11blr4"]

[ext_resource type="Theme" uid="uid://bjaqa6micsjj3" path="res://base.tres" id="1_7638l"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_vnj2m"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vnj2m")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.498039, 0.678431, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = 16.0
offset_right = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "JOURNAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="NewPage" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "New Pages"

[node name="BrowsePages" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "Browse Pages"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "Settings"

[node name="Export" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "Export"

[node name="Recover" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "Recover"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "Quit"

[node name="AuthorMargin" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
theme_override_font_sizes/font_size = 16
text = "Made by Spilsed XOXO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Top" type="CanvasLayer" parent="."]

[node name="BrowseBackground" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.498039, 0.678431, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="BrowseBackground"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = 16.0
offset_right = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="BrowseBackground/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "BROWSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="BrowseBackground/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BrowseBackground/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="BrowseBackground/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(640, 300)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Back" type="Button" parent="BrowseBackground/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "BACK"

[node name="SettingsBackground" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.498039, 0.678431, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsBackground"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -176.0
offset_top = 16.0
offset_right = 176.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="SettingsBackground/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "BROWSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="SettingsBackground/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="PublicTitles" type="Button" parent="SettingsBackground/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
toggle_mode = true
button_pressed = true
text = "Public Titles"
icon_alignment = 1

[node name="Back" type="Button" parent="SettingsBackground/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7638l")
text = "BACK"

[connection signal="pressed" from="VBoxContainer/NewPage" to="." method="_on_new_page_pressed"]
[connection signal="pressed" from="VBoxContainer/BrowsePages" to="." method="_on_search_pages_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Export" to="." method="_on_export_pressed"]
[connection signal="pressed" from="VBoxContainer/Recover" to="." method="_on_recover_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="BrowseBackground/VBoxContainer/Back" to="." method="_on_browse_back_pressed"]
[connection signal="toggled" from="SettingsBackground/VBoxContainer/PublicTitles" to="." method="_on_public_titles_toggled"]
[connection signal="pressed" from="SettingsBackground/VBoxContainer/Back" to="." method="_on_settings_back_pressed"]
